[package]
name = "cloudflare-bypasser"
version = "0.3.0"
authors = ["Xavier Lau <c.estlavie@icloud.com>", "Ryujin-K"]
edition = "2021"
repository = "https://github.com/Ryujin-K/cloudflare-bypasser-rs"
description = "A modernized async crate to bypass Cloudflare's anti-bot page (fork with rustls, tokio 1.x, reqwest 0.12)"
readme = "README.md"
keywords = ["bypass", "cloudflare", "async"]
license = "MIT/Apache-2.0"

[dependencies]
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls", "cookies", "gzip", "brotli", "json"] }
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "time"] }
base64 = "0.22"
regex = "1.11"
url = "2.5"
fake_user_agent = "0.2"
